# moya

./: .gitignore  README.md  pyproject.toml
0.1.0/: index.html  objects.inv  versions.json
0.1.0/concepts/: index.html
0.1.0/examples/: index.html
0.1.0/installation/: index.html
0.1.0/quickstart/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html
0.2.0/guides/: index.html
0.2.0/reference/: index.html
0.2.0/search/: search_index.json
copilot-workspace/: planning.md  progress.md  requirements.md  task-learning.md
docs/: explanations.html  guides.html  index.html  quickstart.html  reference.html  tutorials-dynamic.html  tutorials-multi.html  tutorials-ollama.html  tutorials-remote.html  tutorials-simple.html  tutorials.html
examples/: ai_mentor_agent.py  dynamic_agents.py  quick_start.py  quick_start_azure_openai.py  quick_start_bedrock.py  quick_start_crewai.py  quick_start_gemini.py  quick_start_multiagent.py  quick_start_multiagent_react.py  quick_start_ollama.py  quick_start_openai.py  quick_tools.py  quickstart_lambda_agent.py  quickstart_lambda_multiagent.py  remote_agent_server.py  remote_agent_server_with_auth.py  voice_chat_openai.py
examples/2_player_chess/: README.md  chess_2_agents.py  stockfish_setup.sh
examples/hackathon_assistant/: __init__.py  requirements.txt  serverless.yaml
moya/agents/: azure_openai_agent.py  base_agent.py  bedrock_agent.py  crewai_agent.py  gemini_agent.py  lambda_agent.py  ollama_agent.py  openai_agent.py  remote_agent.py
moya/conversation/: message.py
moya/messages/: voice_message.py
(+60 files in other folders)
